# acronymolecules

./: .gitignore  README.md  acronymolcules.ipynb  acronymolecules-venv.yaml  acronymolecules.ipynb  acronymolecules.py  molecule_acronym.py  pyproject.toml  test.py  test_notebook.ipynb
acronymolecules.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
