[tool.poetry]
name = "acronymolecules"
version = "0.1.0"
description = "Makes an acronym into a molecular name"
authors = ["tyrochymicus <tyler.roche@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
